--- a/css/main.css
+++ b/css/main.css
@@ -10,16 +10,41 @@ html {
 }
 
 img {
-  width 100%;
+  width: 100%;
 }
 
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: Georgia, serif;
 }
 
 figcaption {
   font-size: .8rem;
   font-style: italic;
   text-align: center;
+}
+
+nav {
+  font-size: 1.125rem;
+  font-weight: bold;
+  font-family: Georgia, serif;
+}
+
+nav ol {
+  list-style-type: none;
+}
+
+nav a {
+  color: #793284;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #b42885;
+  text-decoration: underline;
+}
+
+.intro {
+  font-size: 1rem;
 }
